# m5apple2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.adv
components/apple2/: CMakeLists.txt  apple2_disk2.c  apple2_machine.c  apple2_video.c  cpu6502.c
components/apple2/include/apple2/: apple2_disk2.h  apple2_machine.h  apple2_video.h  cpu6502.h
components/cardputer/: CMakeLists.txt  cardputer_audio.c  cardputer_display.c  cardputer_keyboard.c  cardputer_keymap.c
components/cardputer/include/cardputer/: cardputer_audio.h  cardputer_display.h  cardputer_input.h  cardputer_keyboard.h  cardputer_keymap.h
docs/plans/: 2026-03-21-v0.2-design.md  2026-03-21-v0.2-implementation.md  2026-03-30-v0.3-design.md  2026-03-31-v0.3-implementation.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_perf.c  app_perf.h  app_picker.c  app_picker.h  app_sd.c  app_sd.h
roms/: README.md
tests/: README.md  apple2_bench.c  apple2_core_tests.c  apple2_rom_smoke.c  cardputer_keymap_tests.c  run_bench.sh  run_disk_compat.sh  run_rom_smoke.sh  run_tests.sh
